--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,41 @@
 @import-normalize;
 /* bring in normalize.css styles */
 
+:root {
+  box-sizing: border-box;
+
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  color-scheme: light dark;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-text-size-adjust: 100%;
+
+
+  font-size: 16px;
+
+  --primary-color: #2196f3;
+  --secondary-color: #fff;
+  --background-color: #fff;
+
+  --primary-background-color: #fff;
+  --secondary-background-color: #2196f3;
+
+}
+
+
 body {
   margin: 0;
+  min-width: 320px;
+  min-height: 100vh;
+
+  background-color: var(--background-color);
+
+  color-scheme: light dark;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
