--- a/src/components/Elements/Button/Button.css
+++ b/src/components/Elements/Button/Button.css
@@ -1,4 +1,4 @@
-.btn{
+.btn {
     padding: 8px 16px;
     border-radius: 2px;
     background-color: #3f51b5;
@@ -6,7 +6,7 @@
     text-align: center;
     display: inline-block;
     color: #fff;
-    border:none;
+    border: none;
     font-family: inherit;
     cursor: pointer;
     font-size: 18px;
@@ -15,7 +15,17 @@
     font-weight: 500;
     min-width: 180px;
 
-    &:hover,:focus{
+    &:hover,
+    :focus {
         background-color: #303f9f;
     }
+
+
+
+    &:disabled {
+        background-color: #eee;
+        color: #ccc;
+        cursor: not-allowed;
+    }
+
 }
